# skills

./: .gitignore  README.md
.claude-plugin/: plugin.json
skills/byok-register/: README.md  SKILL.md  install.md  pyproject.toml
skills/byok-register/helpers/: list_byok.py  register_byok.py  verify_byok.py
skills/capture-traces/: README.md  SKILL.md  install.md  pyproject.toml
skills/capture-traces/helpers/: advance_stage.py  capture_trace.py  snapshot_asset.py
skills/connect/: .gitignore  README.md  SKILL.md  install.md  pyproject.toml
skills/connect/helpers/: bootstrap.py  check_environment.py  smoke_test.py
skills/deep-research/: README.md  SKILL.md  install.md  pyproject.toml
skills/deep-research/helpers/: _common.py  fetch_page.py  search_serper.py  synthesize.py
skills/eval-run/: README.md  SKILL.md  install.md  pyproject.toml
skills/eval-run/helpers/: create_eval_run.py  poll_eval_run.py
skills/migrate-inference/: README.md  SKILL.md  install.md  pyproject.toml
skills/migrate-inference/helpers/: scan_codebase.py
skills/opposition-enrich/: README.md  SKILL.md  install.md  pyproject.toml
skills/opposition-enrich/helpers/: brief.py
skills/privacy-layer/: README.md  SKILL.md  install.md  pyproject.toml
skills/privacy-layer/helpers/: check_capabilities.py  deidentify.py  extract_entities.py
skills/prompt-versioning/: README.md  SKILL.md  install.md  pyproject.toml
skills/prompt-versioning/helpers/: create_prompt_version.py  get_prompt.py  label_prompt.py
skills/usage-audit/: README.md  SKILL.md  install.md  pyproject.toml
skills/usage-audit/helpers/: billing_snapshot.py  usage_events.py  usage_summary.py
skills/voice-modalities/: README.md  SKILL.md  install.md  pyproject.toml
skills/voice-modalities/helpers/: realtime_smoke.py  speak.py  transcribe.py
skills/web-scrape/: README.md  SKILL.md  install.md  pyproject.toml
skills/web-scrape/helpers/: research_targets.py  scrape_links.py
