[project]
name = "capture-traces"
version = "0.1.0"
description = "Turn live inference traffic from migrate-inference into curated data assets via the stimulir CLI -- Raw -> Cleaning -> Clean View -> Snapshot -> Lab, one stage at a time."
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
]
