[project]
name = "usage-audit"
version = "0.1.0"
description = "Read-only cost-per-task visibility -- wraps stimulir's usage summary, raw usage events, and billing snapshot surfaces for spend auditing."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
]
