[project]
name = "voice-modalities"
version = "0.1.0"
description = "Wire an app onto stimulir's voice lanes -- realtime speech-to-speech over the gateway WebSocket (SDK), plus STT/TTS REST helpers with correct request shapes. Real hosted calls; audio bytes never persisted."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "stimulir[realtime]>=0.1.218",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
]
