[project]
name = "voice-modalities"
version = "0.1.0"
description = "Wire an app onto stimulir's voice lane -- one realtime WebSocket covering speech-to-speech, live transcription, and text-to-speech. Real hosted calls; audio bytes never persisted."
requires-python = ">=3.10"
dependencies = [
    "stimulir[realtime]>=0.1.218",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
]
